# learningC

./: CMakeLists.txt  README.md
exam/: main.c
exam/exam_modules/: list.c  list.h
examTemplate/: main.c
examTemplate/examTemp_modules/: list.c  list.h  stack.c  stack.h
probePruefung/: main.c
uebung1und2/: main.c
uebung3/: main.c
uebung5/: aufgabe1.c  aufgabe2.c  aufgabe3.c  aufgabe4.c  aufgabe5.c
uebung6/: aufgabe1.c  aufgabe2.c  aufgabe3.c  aufgabe4.c  aufgabe5.c
uebung6/files/: lotto.txt  node.txt  protokoll.txt  strings.txt
uebung7/: aufgabe1.c  aufgabe2.c  aufgabe3.c
uebung7/palindromLIB/: CMakeLists.txt  palindrom.c  palindrom.h
uebung7/uebung7_modules/: geometrics.c  geometrics.h  list.c  list.h
uebung8/: aufgabe1.c  aufgabe2.c  aufgabe3.c  aufgabe4.c  aufgabe5.c  aufgabe6.c  aufgabe7.c  aufgabe8.c
uebung9/: main.c
